<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eve_ros2_examples</name>
  <version>1.0.0</version>
  <description>A package full of examples that show the usage of all of EVE's ROS2 API</description>
  <author email="will@halodi.com">Will Rifenburgh</author>
  <maintainer email="will@halodi.com">Will Rifenburgh</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">https://github.com/Halodi/eve-ros2-examples</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  
  <depend>std_msgs</depend>
  <depend>action_msgs</depend>
  <depend>halodi_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
